--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="jobCard" id="jobCardTemplate" style="display: none;">
+    <div class="jobCard" id="jobCardTemplate" >
       <div class="leftSide">
         <div class="logo">
-          <img id="logo">
+          <img id="logo" alt="company logo">
         </div>
         <div class="jobDesc">
           <div class="top">
@@ -30,10 +30,11 @@
         </div>
       </div>
       <div class="rightSide" id="categories">
-        
+        <!-- Buttons will be added dynamically here -->
       </div>
     </div>
   </div>
+  
   <script src="./script.js"></script>
 </body>
 </html>
