--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <div class="header"></div>
   <div class="wrapper">
     <div class="jobCard" id="jobCardTemplate" >
       <div class="leftSide">
