--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="header"></div>
   <div class="wrapper">
-    <div class="jobCard" id="jobCardTemplate" >
+    <div class="jobCard" id="jobCardTemplate" style="display: none;">
       <div class="leftSide">
         <div class="logo">
           <img id="logo" alt="company logo">
